# cva6-softcore-contest

./: .gitignore  Notes  README.md  gdb.md  pseudo  vivado_pid2196571.str
bootrom/: encoding.h
cva6-sdk/configs/: buildroot32_defconfig  linux32_defconfig
fpga/: Makefile  xlnx_axi_clock_converter.xci  xlnx_axi_dwidth_converter_dm_master.xci  xlnx_axi_dwidth_converter_dm_slave.xci  xlnx_blk_mem_gen.xci  xlnx_clk_gen.xci  xlnx_processing_system7.xci
fpga/constraints/: zybo_z7_20.xdc
fpga/reports_cva6_fpga_impl/: cva6_fpga.check_timing.rpt  cva6_fpga.timing.rpt  cva6_fpga.timing_WORST_100.rpt  cva6_fpga.utilization.rpt
fpga/reports_cva6_fpga_synth/: cva6_fpga.cdc.rpt  cva6_fpga.check_timing.rpt  cva6_fpga.clock_interaction.rpt  cva6_fpga.timing.rpt  cva6_fpga.timing_WORST_100.rpt  cva6_fpga.utilization.rpt
fpga/src/: cva6_zybo_z7_20.sv
include/: ariane_pkg.sv  instr_tracer_pkg.sv  riscv_pkg.sv
plugin/: Makefile
plugin/pointers/: Makefile  main.c  test.c.021t.ssa  test.c.252t.optimized
plugins/pointers/: notes.md  plugin.c  test.c
plugins/warning/: plugin.c
scripts/: test_ripe.py
src/: alu.sv  ariane.sv  bop_unit.sv  branch_unit.sv  circular_buffer.sv  circular_buffer_dlk  circular_buffer_dlk.sv  circular_buffer_om.sv  commit_stage.sv  decoder.sv  ex_stage.sv  fpu_wrap.sv  issue_read_operands.sv  issue_stage.sv  scoreboard.sv
src/cache_subsystem/: wt_cache_subsystem.sv  wt_icache.sv
src/frontend/: frontend.sv
src/util/: instr_trace_item.svh
zephyr-docker/workspace/perf_baseline/src/: testapp.c
zephyr-docker/workspace/ripe/: CMakeLists.txt
zephyr-docker/workspace/ripe/src/: .ripe_attack_generator.c.swp  ripe_attack_generator.c  ripe_attack_generator.h
zephyr-docker/workspace/ripe_test/: CMakeLists.txt  prj.conf
zephyr-docker/workspace/ripe_test/src/: ripe_attack_generator.c  ripe_attack_generator.h
zephyr-docker/workspace/test_emily/src/: ripe_attack_generator.c  ripe_attack_generator.h
zephyr-docker/workspace/test_sp/: CMakeLists.txt
(+3 files in other folders)
